# MtHasher

./: .travis.yml  LICENSE  Makefile  README.md  build.sh  digest.py  pyproject.toml  setup.cfg
src/mthasher/: __init__.py  __main__.py  digest.py  version.py
src/multihash/: __init__.py  __main__.py  digest.py  version.py
tests/: test_entrypoint.py
