[tool.poetry]
name = "mthasher"
version = "2.0.3"
description = "Calculate multiple hash digests for a piece of data in parallel, one algo/thread."
readme = "README.md"
repository = "https://github.com/ELTE-DH/mthasher"
authors = ["dlazesz"]
license = "MIT"
# License and required Python version is automatically added
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
mthasher = "mthasher.__main__:entrypoint"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
