[metadata]
name = wac-multihash
version = attr: multihash.version.__version__
url = https://github.com/ELTE-DH/multihash
project_urls =
    Bug Tracker = https://github.com/ELTE-DH/multihash/issues
author = dlazesz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT License
description = WAC Multihash
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wac, multihash, hash, hashing
platforms = Any

[options]
python_requires = >=3.8
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    multihash = multihash.digest:main

[options.packages.find]
where = src

